# SAGAST

./: CMakeLists.txt  README.md  package.xml
src/: sagast.cpp
src/feature/: agast.cpp  agast.h
src/feature/agast_core/: AGAST_ALL.h
src/feature/agast_core/AGAST_12d/: AGAST_12d.cpp  OffsetsTable_12d.cpp
src/feature/agast_core/AGAST_12s/: AGAST_12s.cpp  AGAST_7_12s.cpp  OffsetsTable_12s.cpp
src/feature/agast_core/AGAST_7_12d/: AGAST_7_12d.cpp
src/feature/agast_core/AGAST_8/: AGAST_8.cpp  OffsetsTable_8.cpp
src/feature/agast_core/OAST_16/: OAST_16.cpp  OAST_9_16.cpp  OffsetsTable_16.cpp
src/feature/offsets/: getOffsets.cpp
src/feature/score/: agast_score.cpp
